@@ -3,22 +3,22 @@
     <parent>
         <groupId>net.anotheria</groupId>
         <artifactId>parent</artifactId>
-        <version>2.13</version>
+        <version>4.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>moskito-javaagent</artifactId>
-    <version>2.10.1-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <name>moskito-javaagent</name>
     <packaging>jar</packaging>
 
     <properties>
-        <jersey-version>1.17</jersey-version>
-        <moskito.version>2.10.0</moskito.version>
-        <moskito.control.version>3.0.0</moskito.control.version>
-        <slf4j.version>1.7.16</slf4j.version>
-        <logback-classic.version>1.1.5</logback-classic.version>
-        <aspect-j-version>1.8.9</aspect-j-version>
+        <jersey-version>3.1.3</jersey-version>
+        <moskito.version>4.0.0</moskito.version>
+        <moskito.control.version>4.0.0</moskito.control.version>
+        <slf4j.version>2.0.9</slf4j.version>
+        <logback-classic.version>1.4.11</logback-classic.version>
+        <aspect-j-version>1.9.20</aspect-j-version>
     </properties>
 
     <dependencyManagement>
@@ -56,8 +56,19 @@
                         <artifactId>slf4j-api</artifactId>
                         <groupId>org.slf4j</groupId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>net.anotheria</groupId>
+                        <artifactId>distributeme-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>net.anotheria</groupId>
+                        <artifactId>distributeme-generator</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>net.anotheria</groupId>
+                        <artifactId>distributeme-support</artifactId>
+                    </exclusion>
                 </exclusions>
-
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
@@ -69,63 +80,63 @@
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>configureme</artifactId>
-                <version>2.3.4</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-util</artifactId>
-                <version>2.2.0</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-comm</artifactId>
-                <version>2.1.1</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-maf</artifactId>
-                <version>2.2.0</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-tags</artifactId>
-                <version>2.1.1</version>
+                <version>4.0.0</version>
             </dependency>
             <!-- for moskito sql -->
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-db</artifactId>
-                <version>2.1.2</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-web</artifactId>
-                <version>2.1.0</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-plass</artifactId>
-                <version>2.1.4</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-prise</artifactId>
-                <version>2.2.0</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>net.anotheria</groupId>
                 <artifactId>ano-net</artifactId>
-                <version>2.1.1</version>
+                <version>4.0.0</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.5</version>
+                <version>1.16.0</version>
             </dependency>
             <dependency>
                 <groupId>hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>1.8.0.7</version>
+                <version>2.7.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -146,36 +157,39 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.2.2</version>
+                <version>2.10.1</version>
             </dependency>
             <!-- jersey -->
             <dependency>
-                <groupId>com.sun.jersey</groupId>
-                <artifactId>jersey-client</artifactId>
-                <version>${jersey-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.sun.jersey</groupId>
+                <groupId>org.glassfish.jersey.core</groupId>
                 <artifactId>jersey-server</artifactId>
                 <version>${jersey-version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.jersey</groupId>
-                <artifactId>jersey-servlet</artifactId>
+                <groupId>org.glassfish.jersey.containers</groupId>
+                <artifactId>jersey-container-servlet-core</artifactId>
                 <version>${jersey-version}</version>
             </dependency>
             <dependency>
-                <groupId>com.sun.jersey</groupId>
-                <artifactId>jersey-json</artifactId>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-json-jackson</artifactId>
                 <version>${jersey-version}</version>
             </dependency>
-            <!-- jax-rs -->
             <dependency>
-                <groupId>javax.ws.rs</groupId>
-                <artifactId>jsr311-api</artifactId>
-                <version>1.1.1</version>
+                <groupId>org.glassfish.jersey.inject</groupId>
+                <artifactId>jersey-hk2</artifactId>
+                <version>${jersey-version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.glassfish.jersey.media</groupId>
+                <artifactId>jersey-media-multipart</artifactId>
+                <version>${jersey-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jersey.bundles</groupId>
+                <artifactId>jaxrs-ri</artifactId>
+                <version>${jersey-version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -183,10 +197,26 @@
     <dependencies>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet.jsp</groupId>
+            <artifactId>jakarta.servlet.jsp-api</artifactId>
+            <version>3.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
         </dependency>
 
         <dependency>
@@ -271,12 +301,6 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-all</artifactId>
-            <version>4.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
@@ -294,7 +318,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>3.3.2</version>
                 <configuration>
                     <filesets>
                         <fileset>
@@ -339,7 +363,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
@@ -385,8 +409,19 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
+                <version>3.5.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
